<resources>
    <string name="app_name">Android Studio Sandbox</string>
    <string name="app_name2">Android Studio Sandbox - Tabs</string>
    <string name="app_auth">Laurence Maar</string>
    <string name="app_desc">
        This project is an Android Studio Sandbox for prototyping.
        Press the button below to jump to the demo section and then navigate using the tabs.
    </string>
    <string name="app_desc_off">
        The project description has been turned off.
    </string>    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="onPause">onPause() Triggered</string>
    <string name="text_on">Status: ON</string>
    <string name="text_off">Status: OFF</string>

    <!-- Menu -->
    <string name="menu_file">File</string>
    <string name="menu_new">New...</string>
    <string name="menu_open">Open...</string>
    <string name="menu_quit">Quit</string>

    <!-- Tabbed Activity -->
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_random">Random</string>
    <string name="tab_text_battle">Battle</string>
    <string name="tab_text_services">Srvcs</string>
    <string name="tab_text_blank">Blank</string>

    <!-- Fragment Blank -->
    <string name="hello_blank_fragment">Blank Fragment</string>

    <!-- Fragment - Random -->
    <string name="random_desc">This fragment generates a random number</string>
    <string name="random_prompt">Max:</string>
    <string name="button_random">Generate Random Number</string>

    <!-- Fragment Battle -->
    <string name="hello_battle_fragment_v1">Battle!</string>

    <!-- Fragment Battle -->
    <string name="hello_battle_fragment_v2">Battle! v2</string>
    <string name="text_enemy">ENEMY</string>
    <string name="text_player">PLAYER</string>
</resources>
